--- a/Model_overview/first_project/template/firstApp/index.html
+++ b/Model_overview/first_project/template/firstApp/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-{% load static  %}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
+    <!-- Link to your CSS file using the {% static %} template tag -->
+    <link rel="stylesheet" href="{% static 'css/mystyle.css' %}"/>
 </head>
 <body>
-     <h1>HI, welcome to Django level two</h1>
-     <h2>Here, are your access records: </h2>
-        <div class="djangtwo">
-            {% if access_records %}
-            <table>
-                <thead>
-                <th>Site Name</th>
-                <th>Date Accessed</th>
-                </thead>
+    <h1>HI, welcome to Django level two</h1>
+    <h2>Here are your access records:</h2>
+    <div class="djangtwo">
+        {% if access_records %}
+        <table>
+            <thead>
+                <tr>
+                    <th>Site Name</th>
+                    <th>Date Accessed</th>
+                </tr>
+            </thead>
+            <tbody>
                 {% for acc in access_records %}
-            <tr>
-                <td>{{ acc.name }}</td>
-                <td>{{ acc.date }}</td>
-            </tr>
-            {% endfor %}
-            </table>
-            {% else %}
-            <p> No access records found!! </p>
-            {% endif %}
-        </div>
+                <tr>
+                    <td>{{ acc.name }}</td>
+                    <td>{{ acc.date }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <p>No access records found!!</p>
+        {% endif %}
+    </div>
 </body>
 </html>
