--- a/DjangoLevelTwo/mysite/template/mysiteApp/index.html
+++ b/DjangoLevelTwo/mysite/template/mysiteApp/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+
+    <link >
 </head>
 <body>
- <h1> working </h1>
-<h2>Go to users to see the user list</h2>
+    <div class="container">
+        <div class="jumbotron">
+            <h1> Welcome </h1>
+            <h2>Go to users to see the user to sign up!!!</h2>
+        </div>
+    </div>
+
 </body>
 </html>
