--- a/DjangoLevelTwo/mysite/template/mysiteApp/users.html
+++ b/DjangoLevelTwo/mysite/template/mysiteApp/users.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>users</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h1> Here are your users for mysiteApp: </h1>
-{% if users %}
-    <ol>
-        {% for person in users %}
-        <li>User Info</li>
-        <ul>
-            <li>First Name: {{ person.first_name }}</li>
-            <li>Last Name: {{ person.last_name }}</li>
-            <li>Email: {{ person.email }}</li>
-        </ul>
-        {% endfor %}
-    </ol>
-{% endif %}
+<div class="container">
+    <h1>PLease sign up here!!!!!!!! </h1>
+    <form method="POST">
+         {{ form.as_p }}
+            {% csrf_token %}
+            <input type="submit" class="btn btn-primary" value="Submit">
+    </form>
+<!--{% if users %}-->
+<!--    <ol>-->
+<!--        {% for person in users %}-->
+<!--        <li>User Info</li>-->
+<!--        <ul>-->
+<!--            <li>First Name: {{ person.first_name }}</li>-->
+<!--            <li>Last Name: {{ person.last_name }}</li>-->
+<!--            <li>Email: {{ person.email }}</li>-->
+<!--        </ul>-->
+<!--        {% endfor %}-->
+<!--    </ol>-->
+<!--{% endif %}-->
+</div>
+
 </body>
 </html>
