--- a/DjangoLevelFive/learning_users/templates/basic_app/base.html
+++ b/DjangoLevelFive/learning_users/templates/basic_app/base.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -13,6 +12,13 @@
                 <li><a class="navbar-brand" href="{% url 'index' %}">DJANGO</a></li>
                 <li><a class="navbar-link" href="{% url 'admin:index' %}">ADMIN</a></li>
                 <li><a class="navbar-link" href="{% url 'basic_app:register' %}">Register</a></li>
+
+                {% if user.is_authenticated %}
+                <li><a class="navbar-link" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li><a class="navbar-link" href="{% url 'basic_app:user_login' %}">LogIN</a></li>
+
+                {% endif %}
             </ul>
         </div>
     </nav>
