--- a/DjangoLevelFive/learning_users/templates/basic_app/login.html
+++ b/DjangoLevelFive/learning_users/templates/basic_app/login.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'basic_app/base.html' %}
+{% block body_block %}
 
-</body>
-</html>
+<div class="jumbotron">
+    <h1>Please login!!</h1>
+    <form method="post" action="{% url 'basic_app:user_login' %}">
+
+    {% csrf_token %}
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
+    <button type="submit">Login</button>
+</form>
+
+</div>
+
+{% endblock %}
