--- a/advanced_section/advcbv/basic_app/templates/basic_app/basic_app_base.html
+++ b/advanced_section/advcbv/basic_app/templates/basic_app/basic_app_base.html
@@ -7,16 +7,12 @@
     <title>Base</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-default navbar-static-top">
+<!--<nav class="navbar navbar-expand-lg navbar-default navbar-static-top">-->
+<nav class="navbar navbar-default navbar-static-top">
     <ul class="navbar-nav">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'basic_app:list' %}">Schools</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-    </li>
-    <!-- Add other navigation items as needed -->
-</ul>
+        <li class="nav-item"><a class="nav-link" href="{% url 'basic_app:list' %}">Schools</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
+    </ul>
 
 </nav>
     <div class="container">
