--- a/advanced_section/advcbv/basic_app/templates/basic_app/school_list.html
+++ b/advanced_section/advcbv/basic_app/templates/basic_app/school_list.html
@@ -6,9 +6,8 @@
 
 <ol>
     {% for school in schools %}
-    <h2><li>
-        <a href="{{school.id}}">{{ school.name }}</a>
-    </li></h2>
+    <li><h2><a href="{{school.id}}">{{ school.name }}</a></h2></li>
     {% endfor %}
 </ol>
 {% endblock %}
+
